modificacões nos arquivos

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#contatos" class="btn__contact contact__menu">
+                    <a href="#contatos" class="btn__contact__menu">
                         Contato
                     </a>
                 </li>
@@ -397,6 +397,24 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"></path>
                             </svg>
+                        </span>
+                    </a>
+                </div>
+            </div>
+            <div class="project__card">
+                <div class="project__image">
+                    <img src="/assets/images/projects/burger-landing-page.png" alt="Imagem - Burger landing page" />
+                </div>
+                <div class="project__card__content">
+                    <h2 class="title__card">
+                        Burger landing page
+                    </h2>
+                    <p class="paragraph__card">
+                        Burger é um projeto que foi feito com base no design de uma landing page no figma de um fast food.
+                    </p>
+                    <a href="https://burger-landingpage.vercel.app/" target="_blank" class="button__card">
+                        <span>
+                            Ver projeto
                         </span>
                     </a>
                 </div>
