correção no link do projeto e alteração na animação do carrossel

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                             <p class="paragraph__card">
                                 A AbelhaWeb é um blog que consite passar informações sobre as abelhas.
                             </p>
-                            <a href="https://paesdcasa.vercel.app/" target="_blank" class="button__card">
+                            <a href="https://abelhaweb.vercel.app/" target="_blank" class="button__card">
                                 Ver projeto
                             </a>
                         </div>
